// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useContactFormManualEmbedInstructionsCardState Contact auto embed flag is ACTIVE should return "both" instructions card state when not connected to any store 1`] = `
{
  "isOpen": false,
  "tabs": [
    {
      "code": "<Code snippet>",
      "id": "shopify-website",
      "instructionAlert": "Make sure to insert the code on <b>all pages</b> you wish to display the contact form.",
      "instructions": [
        "Go to your store's admin panel and under <b>Online Store</b>, select <b>Pages</b>.",
        "Select the page where you want to embed the contact form",
        "Under the <b>Content</b> section, click <span style="position: relative;display: inline-block;background-color:var(--neutral-grey-2);border-radius:4px;border: 1px solid var(--neutral-grey-3);width: 24px;height: 24px;transform: translateY(7px);margin-right: 2px;margin-left: 2px">
        <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" style="position: absolute;top: 50%;left: 50%;transform: translate(-50%, -50%)">
        <path d="M5.79966 10.5999L3.19966 7.99994L5.79966 5.39994C6.05966 5.13994 6.05966 4.72661 5.79966 4.46661C5.53966 4.20661 5.12633 4.20661 4.86633 4.46661L1.80633 7.52661C1.54633 7.78661 1.54633 8.20661 1.80633 8.46661L4.86633 11.5333C5.12633 11.7933 5.53966 11.7933 5.79966 11.5333C6.05966 11.2733 6.05966 10.8599 5.79966 10.5999ZM10.1997 10.5999L12.7997 7.99994L10.1997 5.39994C9.93966 5.13994 9.93966 4.72661 10.1997 4.46661C10.4597 4.20661 10.873 4.20661 11.133 4.46661L14.193 7.52661C14.453 7.78661 14.453 8.20661 14.193 8.46661L11.133 11.5333C10.873 11.7933 10.4597 11.7933 10.1997 11.5333C9.93966 11.2733 9.93966 10.8599 10.1997 10.5999Z" fill="#1D365C"/>
        </svg>
        </span> <b>Show HTML</b>",
        "Copy and paste the code snippet below into the container",
        "Save changes",
      ],
      "title": "Shopify Website",
    },
    {
      "code": "<Code snippet>",
      "id": "any-other-website",
      "instructionAlert": "Make sure to insert the code on <b>all pages</b> you wish to display the contact form.",
      "instructions": [
        "Edit the source code of your website",
        "Add the code snippet anywhere between &lt;body&gt; and &lt;/body&gt; where you want your Contact Form to be displayed on the page",
        "Save the file and commit changes",
      ],
      "title": "Any Other Website",
    },
  ],
}
`;

exports[`useContactFormManualEmbedInstructionsCardState Contact auto embed flag is ACTIVE should return the "any other website" instructions card state when connected to a non-Shopify store 1`] = `
{
  "isOpen": true,
  "tabs": [
    {
      "code": "<Code snippet>",
      "id": "any-other-website",
      "instructionAlert": "Make sure to insert the code on <b>all pages</b> you wish to display the contact form.",
      "instructions": [
        "Edit the source code of your website",
        "Add the code snippet anywhere between &lt;body&gt; and &lt;/body&gt; where you want your Contact Form to be displayed on the page",
        "Save the file and commit changes",
      ],
      "title": "Any Other Website",
    },
  ],
}
`;

exports[`useContactFormManualEmbedInstructionsCardState Contact auto embed flag is ACTIVE should return the "shopify website" instructions card state when connected to Shopify store 1`] = `
{
  "isOpen": false,
  "tabs": [
    {
      "code": "<Code snippet>",
      "id": "shopify-website",
      "instructionAlert": "Make sure to insert the code on <b>all pages</b> you wish to display the contact form.",
      "instructions": [
        "Go to your store's admin panel and under <b>Online Store</b>, select <b>Pages</b>.",
        "Select the page where you want to embed the contact form",
        "Under the <b>Content</b> section, click <span style="position: relative;display: inline-block;background-color:var(--neutral-grey-2);border-radius:4px;border: 1px solid var(--neutral-grey-3);width: 24px;height: 24px;transform: translateY(7px);margin-right: 2px;margin-left: 2px">
        <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" style="position: absolute;top: 50%;left: 50%;transform: translate(-50%, -50%)">
        <path d="M5.79966 10.5999L3.19966 7.99994L5.79966 5.39994C6.05966 5.13994 6.05966 4.72661 5.79966 4.46661C5.53966 4.20661 5.12633 4.20661 4.86633 4.46661L1.80633 7.52661C1.54633 7.78661 1.54633 8.20661 1.80633 8.46661L4.86633 11.5333C5.12633 11.7933 5.53966 11.7933 5.79966 11.5333C6.05966 11.2733 6.05966 10.8599 5.79966 10.5999ZM10.1997 10.5999L12.7997 7.99994L10.1997 5.39994C9.93966 5.13994 9.93966 4.72661 10.1997 4.46661C10.4597 4.20661 10.873 4.20661 11.133 4.46661L14.193 7.52661C14.453 7.78661 14.453 8.20661 14.193 8.46661L11.133 11.5333C10.873 11.7933 10.4597 11.7933 10.1997 11.5333C9.93966 11.2733 9.93966 10.8599 10.1997 10.5999Z" fill="#1D365C"/>
        </svg>
        </span> <b>Show HTML</b>",
        "Copy and paste the code snippet below into the container",
        "Save changes",
      ],
      "title": "Shopify Website",
    },
  ],
}
`;

exports[`useContactFormManualEmbedInstructionsCardState Contact auto embed flag is INACTIVE should return the "any other website" instructions card state -  1`] = `
{
  "isOpen": true,
  "tabs": [
    {
      "code": "<Code snippet>",
      "id": "any-other-website",
      "instructionAlert": "Make sure to insert the code on <b>all pages</b> you wish to display the contact form.",
      "instructions": [
        "Edit the source code of your website",
        "Add the code snippet anywhere between &lt;body&gt; and &lt;/body&gt; where you want your Contact Form to be displayed on the page",
        "Save the file and commit changes",
      ],
      "title": "Any Other Website",
    },
  ],
}
`;
